--- a/styles.css
+++ b/styles.css
@@ -406,16 +406,23 @@ a img{
     background: transparent;
     height: auto;
   }
+  .android-card-container .mdl-card__title a {
+    text-decoration: none;
+  }
 
+  .android-card-container .mdl-card__title a:hover {
+    text-decoration: underline #8bc34a;
+  }
   .android-card-container .mdl-card__title-text {
     color: black;
     height: auto;
+    font-weight: 400;
   }
 
   .android-card-container .mdl-card__supporting-text {
     height: auto;
     color: black;
-    padding-bottom: 56px;
+    padding-bottom: 46px;
   }
 
   .android-card-container .mdl-card__actions {
@@ -425,7 +432,7 @@ a img{
 
   .android-card-container .mdl-card__actions a {
     border-top: none;
-    font-size: 16px;
+    font-size: 14px;
   }
 
 .android-footer {
